# TravelSchedule/Models/NearestStationsResponse.swift
@@ -8,14 +8,9 @@
 import Foundation
 
 // MARK: - NearestStations
-struct ApiResponse: Codable {
+struct NearestStationsResponse: Codable {
     let pagination: Pagination
     let stations: [Station]
-}
-
-// MARK: - Pagination
-struct Pagination: Codable {
-    let total, limit, offset: Int
 }
 
 // MARK: - Station
@@ -54,32 +49,5 @@ struct Schedule: Codable {
     enum CodingKeys: String, CodingKey {
         case desktopURL = "desktop_url"
         case touchURL = "touch_url"
-    }
-}
-
-// MARK: - Encode/decode helpers
-
-class JSONNull: Codable, Hashable {
-
-    public static func == (lhs: JSONNull, rhs: JSONNull) -> Bool {
-        return true
-    }
-
-    public var hashValue: Int {
-        return 0
-    }
-
-    public init() {}
-
-    public required init(from decoder: Decoder) throws {
-        let container = try decoder.singleValueContainer()
-        if !container.decodeNil() {
-            throw DecodingError.typeMismatch(JSONNull.self, DecodingError.Context(codingPath: decoder.codingPath, debugDescription: "Wrong type for JSONNull"))
-        }
-    }
-
-    public func encode(to encoder: Encoder) throws {
-        var container = encoder.singleValueContainer()
-        try container.encodeNil()
     }
 }
